--- a/src/components/Home/homeStyle.less
+++ b/src/components/Home/homeStyle.less
@@ -1,24 +1,7 @@
-.temp_style{
-    padding: 0;
-    margin: 0;
-    padding-left: 20px;
-    font-weight: bolder;
+@import url('../common.less');
+
+.temperature {
     font-size: 100px;
-    text-align: left;
-    text-shadow: 5px 5px 5px rgb(15, 15, 15);
-}
-
-.unit{
-    color: black;
-    display: inline;
-    font-size: 50px;
-    text-shadow: 5px 5px 5px rgb(15, 15, 15);
-}
-
-.city_text{
-    color: black;
-    font-weight: bolder;
-    font-size: larger;
 }
 
 .sunset{
