--- a/src/components/TempBanner/TempBannerStyle.less
+++ b/src/components/TempBanner/TempBannerStyle.less
@@ -1,22 +1,5 @@
-.city_text{
-    color: black;
-    font-weight: bolder;
-    font-size: larger;
-}
+@import url('../common.less');
 
-.temp_style{
-    padding: 0;
-    margin: 0;
-    padding-left: 20px;
-    font-weight: bolder;
+.temperature {
     font-size: 80px;
-    text-align: left;
-    text-shadow: 5px 5px 5px rgb(15, 15, 15);
-}
-
-.unit{
-    color: black;
-    display: inline;
-    font-size: 50px;
-    text-shadow: 5px 5px 5px rgb(15, 15, 15);
 }
