--- a/src/components/common.less
+++ b/src/components/common.less
@@ -10,3 +10,25 @@
 	text-align: center;
 	margin: 0 auto;
 }
+
+.city_text {
+    color: black;
+    font-weight: bolder;
+    font-size: larger;
+}
+
+.temperature {
+    padding: 0;
+    margin: 0;
+    padding-left: 20px;
+    font-weight: bolder;
+    text-align: left;
+    text-shadow: 5px 5px 5px rgb(15, 15, 15);
+}
+
+.temp_unit {
+    color: black;
+    display: inline;
+    font-size: 50px;
+    text-shadow: 5px 5px 5px rgb(15, 15, 15);
+}
