--- a/src/components/TimeCycle/timeStyle.less
+++ b/src/components/TimeCycle/timeStyle.less
@@ -3,3 +3,36 @@
     text-align: left;
     padding: 24px;
 }
+
+.detail_container{
+    text-align: left;
+}
+
+.morningDetails{
+    color: rgb(164, 77, 15);
+    font-size: 20px;
+}
+
+.morning_title{
+    font-size: 30px;
+    position: relative;
+    color: rgb(220, 156, 72);
+    font-weight: 900;
+    top: -30px;
+}
+
+.detail_table{
+    width: 100%;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+
+.detail_table>tr> td{
+    text-align: left;
+    width: 25%;
+}
+
+.right_details{
+    list-style: none;
+}
