--- a/src/components/Home/homeStyle.less
+++ b/src/components/Home/homeStyle.less
@@ -7,22 +7,19 @@
 .sunset{
     color: rgb(79, 0, 0);
     text-align: left;
-    font-size: 22px;
-    font-style: oblique;
-    font-weight: bolder;
+    font-size: 18px;
+    font-weight: 1000;
     padding: 0;
     padding-left: 20px;
     margin: 0;
+    position: relative;
+    top: -3px;
 }
 
 .clarity{
-    color: rgb(0, 0, 0);
     font-size: 20px;
-    position: relative;
-    top: -45px;
-    right: -55px;
-    font-weight: bold;
-
+    top: -58px;
+    right: -82px;
 }
 
 .rain_img{
@@ -45,24 +42,36 @@
     color: white;
     font-size: 15px;
     width: 100%;
-    height: 150px;
+    height: auto;
     border-radius: 10px;
-    padding: 3px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .inner_detail_div{
-    align-self: center;
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    font-style: oblique;
     border-color: black;
     border-radius: 5px;
     background-color: rgba(45, 43, 43, 0.661);
-    padding: 10px;
     margin: 10px;
-    width: auto;
-    height: 100px;
+    width: 33.33%;
+    height: 120px;
+}
+
+.inner_detail_div>*{
+    padding: auto;
+    margin: auto;
+}
+
+.inner_detail_div>p{
+    color: rgb(162, 162, 162);
+}
+
+.inner_detail_div .value{
+    font-size: 25px;
+    font-weight: lighter;
 }
 
 .details{
@@ -80,16 +89,17 @@
     color: white;
     width: 100%;
     font-size: 15px;
-    height: 150px;
+    height: auto;
     border-radius: 10px;
     padding: 3px;
     margin-bottom: 20px;
 }
 
-.forecast>p{
+.forecast>div>p{
     font-size: medium;
     font-weight: bolder;
-    color: black;
+    color: rgb(162, 162, 162);
+    padding-left: 20px;
 }
 
 .rain{
@@ -97,7 +107,7 @@
     font-weight: bolder;
     color: black;
     position: relative;
-    right: -35px;
+    right: -37px;
     top: 8px;
 }
 
@@ -106,4 +116,8 @@
     vertical-align: middle;
     position: relative;
     left: -90px;
+}
+
+.temp_table{
+    width: 450px;
 }
