--- a/src/components/TempBanner/TempBannerStyle.less
+++ b/src/components/TempBanner/TempBannerStyle.less
@@ -1,5 +1,26 @@
-@import url('../common.less');
-
 .temperature {
-    font-size: 80px;
+    color: white;
+    display: inline;
+    font-size: 50px;
+    font-weight: 750;
+    text-shadow: 0px 5px 5px rgb(15, 15, 15);
 }
+
+.temp_unit {
+    color: black;
+    display: inline;
+    font-size: 20px;
+    font-weight: 700;
+    text-shadow: 0px 5px 5px rgb(15, 15, 15);
+}
+
+.clarity {
+    display: inline;
+}
+
+.banner {
+    font-size: 30px;
+    color: black;
+    text-align: center;
+}
+
