--- a/src/components/common.less
+++ b/src/components/common.less
@@ -32,3 +32,18 @@
     font-size: 50px;
     text-shadow: 5px 5px 5px rgb(15, 15, 15);
 }
+
+.clarity {
+    color: rgb(0, 0, 0);
+    position: relative;
+    font-weight: bold;
+}
+
+.box{
+    border: 3px solid black;
+    border-radius: 20px;
+    background-color: rgb(25, 25, 25);
+    opacity: 0.9;
+    padding: 25px;
+    margin: 5px;
+}
