--- a/src/components/Home/homeStyle.less
+++ b/src/components/Home/homeStyle.less
@@ -2,6 +2,28 @@
 
 .temperature {
     font-size: 100px;
+    padding: 0;
+    margin: 0;
+    padding-left: 20px;
+    font-weight: bolder;
+    text-align: left;
+    text-shadow: 5px 5px 5px rgb(15, 15, 15);
+}
+
+.temp_unit {
+    color: black;
+    display: inline;
+    font-size: 50px;
+    text-shadow: 5px 5px 5px rgb(15, 15, 15);
+}
+
+.clarity {
+    color: rgb(0, 0, 0);
+    position: relative;
+    font-weight: bold;
+    font-size: 20px;
+    top: -58px;
+    right: -82px;
 }
 
 .sunset{
@@ -14,12 +36,6 @@
     margin: 0;
     position: relative;
     top: -3px;
-}
-
-.clarity{
-    font-size: 20px;
-    top: -58px;
-    right: -82px;
 }
 
 .rain_img{
