finish time page

--- a/src/components/TimeCycle/timeStyle.less
+++ b/src/components/TimeCycle/timeStyle.less
@@ -1,24 +1,19 @@
 .details{
     color: rgb(99, 37, 16);
     text-align: left;
-    padding: 24px;
 }
 
 .detail_container{
     text-align: left;
 }
 
-.morningDetails{
-    color: rgb(164, 77, 15);
-    font-size: 20px;
-}
-
-.morning_title{
+.title{
     font-size: 30px;
     position: relative;
     color: rgb(220, 156, 72);
     font-weight: 900;
-    top: -30px;
+    padding: 0;
+    margin: 0;
 }
 
 .detail_table{
@@ -27,7 +22,6 @@
     font-weight: 700;
 }
 
-
 .detail_table>tr> td{
     text-align: left;
     width: 25%;
@@ -35,4 +29,24 @@
 
 .right_details{
     list-style: none;
+    color: rgb(220, 156, 72);
+}
+
+.left_morning_details{
+    color: rgb(79, 28, 97);
+    display: list-item;
+    margin-left: 10px;
+    padding: 0;
+}
+
+.left_evening_details{
+    color: rgb(144, 72, 27);
+    display: list-item;
+    margin-left: 10px;
+    padding: 0;
+}
+
+td>p{
+    padding: 0;
+    margin: 0;
 }
