--- a/src/components/TimeCycle/timeStyle.less
+++ b/src/components/TimeCycle/timeStyle.less
@@ -7,13 +7,18 @@
     text-align: left;
 }
 
+.detail_container>img{
+    display: inline;
+}
+
 .title{
+    display: inline;
     font-size: 30px;
-    position: relative;
     color: rgb(220, 156, 72);
     font-weight: 900;
     padding: 0;
     margin: 0;
+    margin-left: 20px;
 }
 
 .detail_table{
@@ -33,7 +38,7 @@
 }
 
 .left_morning_details{
-    color: rgb(79, 28, 97);
+    color: rgb(144, 72, 27);
     display: list-item;
     margin-left: 10px;
     padding: 0;
